--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -10,6 +10,42 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
+     openwrt_soc:
+        description: "Select 0penwrt SoC"
+        required: false
+        default: "s905x3_s905d"
+        type: choice
+        options:
+          - all
+          - s905x3_s905d
+          - a311d
+          - s922x
+          - s922x-n2
+          - s922x-reva
+          - s905x3
+          - s905x2
+          - s905x2-km3
+          - s912
+          - s912-m8s
+          - s905d
+          - s905d-ki
+          - s905x
+          - s905w
+          - s905
+          - s905l3a
+      kernel_version:
+        description: "Select kernel version"
+        required: false
+        default: "5.4.191_5.10.100_5.15.51_5.18.10"
+        type: choice
+        options:
+          - 5.4.200_5.10.125
+          - 5.10.125_5.15.50
+          - 5.15.45_5.18.5
+          - 5.4.200
+          - 5.10.125
+          - 5.15.50
+          - 5.18.5
       ssh:
         description: 'SSH connection'
         required: false
@@ -77,10 +113,10 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: https://github.com/Jejz168/OpenWrt/releases/download/ARMv8-ROOTFS/openwrt-armvirt-64-default-rootfs.tar.gz
-        PACKAGE_SOC: s905d_s905x3
+        PACKAGE_SOC: ${{ github.event.inputs.openwrt_soc }}
         WHOAMI: Jejz
         KERNEL_REPO_URL: https://github.com/Jejz168/OpenWrt/tree/main/backup/kernel
-        KERNEL_VERSION_NAME: 5.4.191_5.10.100_5.15.51_5.18.10
+        KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
     
