--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -36,17 +36,18 @@ on:
       kernel_version:
         description: "Select kernel version"
         required: false
-        default: "5.4.191_5.10.100_5.15.50_5.18.10"
+        default: "5.4.191_5.10.116_5.15.50_5.18.10_5.19.1"
         type: choice
         options:
-          - 5.4.191_5.10.100_5.15.50_5.18.10
-          - 5.4.191_5.10.100
-          - 5.10.100_5.15.50
-          - 5.15.50_5.18.10
+          - 5.4.191_5.10.116_5.15.60_5.18.16_5.19.1
+          - 5.4.191_5.10.116
+          - 5.10.116_5.15.60
+          - 5.15.60_5.18.16
           - 5.4.191
           - 5.10.100
-          - 5.15.50
-          - 5.18.10
+          - 5.15.60
+          - 5.18.16
+          - 5.19.1
   #schedule:
     #- cron: '45 22 * * *'
 
