--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -296,7 +296,7 @@ jobs:
         WHOAMI: Jejz
         DISTRIB_REVISION: ${OPENWRT_VER} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
         KERNEL_REPO_URL: https://github.com/Jejz168/OpenWrt/tree/main/backup/kernel
-        KERNEL_VERSION_NAME: 5.4.191_5.10.100_5.15.51_5.18.10
+        KERNEL_VERSION_NAME: 5.4.191_5.10.116_5.15.50_5.18.10_5.19.1
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz 
         
